# cmdino-v2-productization

./: .gitignore  DESIGN_DIRECTION.md  README.md  UX_QA_REPORT.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.agents/claude/: CLAUDE.md
.agents/codex/: CODEX.md
.agents/gemini/: GEMINI.md
.agents/ollama/: OLLAMA.md
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-27T09-36-48-440Z.yml  page-2026-04-27T09-42-13-058Z.yml
docs/: ARCHITECTURE_RULES.md  AUTOMATED_QA.md  CLEAN_MACHINE_QA.md  CMDINO_CURRENT_STATE_REPORT_TR.md  CMDINO_FEATURE_BEHAVIOR_CONTRACT.md  CMDINO_GENIS_KAPSAMLI_DURUM_RAPORU_TR.md  CMDINO_MASTER_BRIEF.md  CMDINO_PRODUCT_TODO.md  CMDINO_SCOPE_RECOVERY_SPEC.md  CMDINO_V2_IMPLEMENTATION_PLAN.md  DINO_ASSET_INTEGRATION_SPEC.md  DOGFOOD_WORKFLOW_QA.md  KNOWN_ISSUES.md  PRE_PUSH_VALIDATION_CHECKLIST.md  PRODUCT_TRUST_QA.md  QA_REGRESSION.md  RELEASE_CHECKLIST.md  V1_ALPHA_PACKAGING_CHECKLIST.md
public/demo-skills/: claude-planner.md  codex-implementation.md  gemini-review.md
public/preset-brains/: claude-planner.md  (+3 more)
qa-release/: BUG_REPORT_TEMPLATE.md  CLEAN_MACHINE_QA.md  CLOSED_ALPHA_TESTER_TASKS.md  KNOWN_ISSUES_ALPHA.md  PACKAGE_QA_KIT.ps1  QUICKSTART.md  README.md  RELEASE_NOTES_ALPHA.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: context_library.rs  files.rs  lib.rs  memory_briefs.rs  readiness.rs  session_logs.rs  terminal.rs  workspace.rs
test/: wdio.conf.ts
(+138 files in other folders)
